corrections in Bitcoin section

--- a/lectures.tex
+++ b/lectures.tex
@@ -1386,8 +1386,6 @@ $a_{i+1} = (a_i + n / a_i) / 2$
 
 \subsection{Контрольная, 1 час?}
 
-\newpage
-
 \begin{enumerate}
     \item Перевести числа в двоичную систему: 2, 8, 15, 48.
     \item Что делает код \mintinline{cpp}{template<typename A> A f(A& a) { return a++; }}?
@@ -1430,8 +1428,6 @@ $a_{i+1} = (a_i + n / a_i) / 2$
         $a^p$) не изменит положение вершин $ABCD$? Докажите, что множество ${a, a^2, a^3, ...}$
         (множество всех возможных степеней, без повторeния элементов) образует группу. Найдите её подгруппы.
 \end{enumerate}
-
-\newpage
 
 \subsubsection{ООП --- инкапсуляция и наследование}
 Классы. Инкапсуляция --- сокрытие методов и их реализации внутри типа. Пользовательский интерфейс.
@@ -2706,63 +2702,79 @@ per-element private memory (registers).
 
 \subsection{Блокчейн, криптовалюты, биткоин (BTC)}
 
-Хэш (hash, хэш-сумма).
+хеш (hash, хеш-сумма).
 
-Хэш-функция переводит массив из бит (файл, структуру в памяти, или просто кусок памяти) в число
+хеш-функция переводит массив из бит (файл, структуру в памяти, или просто кусок памяти) в число
 (обычно фиксированной длины, 256 бит, например). На неё накладывается два очень важных условия,
 которые говорят о её "непредсказуемости":
 
-1) Для массивов, отличающихся даже на 1 бит, хэш-суммы должны значительно отличаться.
+1) Для массивов, отличающихся даже на 1 бит, хеш-суммы должны значительно отличаться.
 
 2) Не существует (или хотя бы неизвестен) алгоритм, позволяющий сгенерировать файл, дающий наперёд
-заданную хэш-сумму.
+заданную хеш-сумму.
 
-Таким образом, вероятность того, что хэш какой-то структуры (или массива и т. п.) попадёт в наперёд
-заданный узкий интервал, будет маленькой. Одна из самых известных хэш-функций - sha256
+Таким образом, вероятность того, что хеш какой-то структуры (или массива и т. п.) попадёт в наперёд
+заданный узкий интервал, будет маленькой. Одна из самых известных хеш-функций - sha256
 
-Хэш-чеин (hash chain).
+хеш-чеин (hash chain).
 
 Помните, как устроен односвязный список? Каждый элемент списка помимо значения хранит указатель
 (адрес) следующего элемента списка, тот - следующего за ним, и так до конца. Блокчеин в простейшем
-виде - тот же односвязный список, но в нем каждый следующий элемент ещё хранит хэш предыдущего
-элемента. При этом этот хэш считается от всего элемента, включая ту часть, в которой записан хэш
+виде - тот же односвязный список, но в нем каждый следующий элемент ещё хранит хеш предыдущего
+элемента. При этом этот хеш считается от всего элемента, включая ту часть, в которой записан хеш
 элемента перед предыдущим.
 
 Если в обычном списке замена элемента обойдётся в O(1) операций, то в таком простейшем блокчеине
-для замены элемента нужно будет вычислить заново и записать хэш-суммы всех последующих элементов,
+для замены элемента нужно будет вычислить заново и записать хеш-суммы всех последующих элементов,
 стоить это будет O(N).
+
+\begin{figure}
+	\includegraphics[width=0.6\linewidth]{hash-tree.png}
+    \caption{\label{hash-tree}Дерево Меркла (дерево хешей).}
+\end{figure}
 
 Дерево Меркла
 
 Теперь представим двоичное дерево, построенное по несколько похожему принципу. Пусть нижние ноды
-дерева содержат хэши данных (разбитых на блоки), для этих нод попарно вычисляется хэш от суммы (или
-объединения) их хэшей, и так далее, до верхушки. Построение такой структуры выполняется за O(N)
-операций, однако изменение одного блока данных и перестройка дерева будет стоит O(log N). Проверка
-того, что данный блок принадлежит дереву, также дешёвая - для этого достаточно посчитать хэш блока
-и пройтись по нодам снизу вверх, за O(log N).
+дерева содержат хеши данных (разбитых на блоки), для этих нод попарно вычисляется хеш от суммы (или
+объединения) их хешей, и так далее, до верхушки. Построение такой структуры выполняется за O(N)
+операций, однако проверка того, что данный блок принадлежит дереву, также дешёвая - для этого
+достаточно посчитать хеш блока и пройтись по нодам снизу вверх, за O(log N).
 
-Proof-of-work
+Электронная подпись
 
-Bitcoin хранит транзакции в дереве Меркла. Транзакции - это переводы средств с одного адреса на
-другой. Очевидно, в этой сети можно легко проверить, что транзакция записана верно, просто вычислив
-цепочку хэшей длиной O(log(N), идя по дереву снизу вверх. Но возникает некоторая проблема - в
-дереве Меркла переписать цепочку нод так же легко. Для того, чтобы переписать или изменить что-либо
-в дереве было практически невозможно, дерево Меркла строится на основе блокчейна.
+Представьте себе RSA-шифрование наоборот. Алиса генерирует закрытый и открытый ключи, даёт Бобу
+открытый ключ, но не ждёт зашифрованного сообщения от Боба, а сама закрытым ключом шифрует
+сообщение и передаёт Бобу. Боб, очевидно (как и все вокруг, кто слышал эти сообщения) могут
+расшифровать это сообщение. Зачем это нужно? Если Боб открытым ключом от Алисы смог расшифровать
+сообщение и получил что-то разумное - значит это сообщение отправила именно Алиса, ведь только она
+могла его зашифровать, только у неё есть соответствующий закрытый ключ!
 
-Блокчейн (blockchain, цепочка блоков) - это тот же хэшчейн (на самом деле часто и то и другое
-называют блокчейном), но каждый элемент списка имеет определённое поле, в котором может быть
-записано что угодно, а на хэши накладывается условие, обеспечивающее сложность вычислений:
-например, требуется, чтобы хэш-сумма не превышала определённого значения. Меняя данные в поле для
-произвольных данных, и пересчитывая хэш, можно подобрать содержимое этого поля таким, что условие
-будет выполнено.
+Как это работает на практике. Алисе нужно переслать Бобу документ с подписью, она пересылает ему
+документ, а также зашифрованную закрытым ключоом хэш документа. Боб расшифровывает, а также сам
+вычисляет хэш-функцию и сравнивает полученные результаты. Если они совпадают, то документ именно в
+том виде, в котором Алиса хотела отправить его.
 
-Если пороговое значение для хэша не очень большое, то подбирать данные для произвольного поля
-придётся достаточно долго. В то же время на сложности проверки блокчейна все эти условия и
-дополнительные поля никак не сказываются.
+Транзакции и proof-of-work
 
-Майнинг - это и есть перебор чисел в свободном блоке и вычисление хэшей. Поскольку эта операция
-затратная, но необходимая для работы сети (без неё не записать транзакции), то он оплачивается -
-теми же биткоинами.
+В Bitcoin транзакции - это переводы средств с одного адреса на другой. Каждому адресу соответствует
+пара ключей (открытый и закрытый). Транзакция возможна на любой биткоин-адрес, однако тот, кто
+переводит средства со своего адреса (только он знает закрытый ключ), должен подписать транзакцию
+своей цифровой подписью.
+
+Все блоки транзакций хранятся участниками сети в дереве Меркла, каждая нода которого дополнительно
+содержит поле для произвольных данных. Данные в этом поле можно менять, добиваясь того, чтобы хэш
+была меньше определённого значения. Это обеспечивает высокую сложность построения дерева, однако
+при этом верификация блока происходит по-прежнему быстро, поскольку поля для произвольных данных
+уже заполнены.
+
+При совершении новой транзакции она должна распространиться по сети - быть записана в блок всех
+участников. Участники записывают транзакцию в блок только в том случае, если могут верифицировать
+её. Майнинг - это и есть перебор чисел в блоке произвольных данных и вычисление хешей. Поскольку
+эта операция затратная, но необходимая для работы сети (без неё не записать транзакции), то он
+оплачивается - теми же биткоинами.
+
+\subsection{Scala: базовый синтаксис}
 
 \subsection{Сортировка слиянием.}
 
@@ -4622,8 +4634,6 @@ plt.savefig("julia.pdf")
 
 \subsection{Контрольная, 1 час, дома можно дорешать}
 
-\newpage
-
 \begin{enumerate}
     \item Составьте численную схему для решения уравнения
         \begin{equation}
@@ -4674,8 +4684,6 @@ plt.savefig("julia.pdf")
         отрезке $[0, 1]$. Оцените среднее и дисперсию элементов матрицы --- произведения $A B$.
         Предложите метод для оценки среднего и дисперсии детерминанта матрицы $A$.
 \end{enumerate}
-
-\newpage
 
 \section{Функциональное программирование. Why FP matters}
 
