minor changes in scala basics

--- a/lectures.tex
+++ b/lectures.tex
@@ -2776,6 +2776,81 @@ per-element private memory (registers).
 
 \subsection{Scala: базовый синтаксис}
 
+\subsubsection{Why Scala?}
+
+Программирование (научное в том числе) - это не только написание своего кода, но и взаимодействие с
+коллегами (умение объяснять, чтение чужого кода и документации, код-ревью), рефакторинг (то есть
+улучшение кода без изменения его функциональности), поддержка и тестирование, работа с системами
+контроля версий. Учиться этим аспектам лучше на новых платформах: они удобнее, проще для освоения,
+они позволяют хотя бы мельком взглянуть на новые возможности (более понятные сообщения об ошибках,
+помощь в рефакторинге и т.  п.), они могут быть избавлены от старых ошибок. C++ и Python в этом
+смысле не очень подходит.  Кроме того, в Python многие легко осваивают простейшие операции и пару
+библиотек (numpy, matplotlib) и им кажется, что изучение Python на этом можно закончить. Низкий
+порог входа отбивает желание двигаться дальше. Динамическая типизация также даёт иногда ложное
+ощущение простоты.  Scala за счёт статической строгой, поддержки pattern matching, ленивых
+вычислений и монадических интерфейсов и многих других вещей позволяет гораздо лучше изучить
+собственно программирование (и функциональное программирование!).  Кроме того, Scala даёт
+возможность писать довольно производительные программы, и вполне распространена в научной среде.
+
+\subsubsection{Промежуточное представление и виртуальная машина}
+
+Создание компилятора (преобразующего исходный код в машинный код) - сложная задача. В начале
+компьютерной эры под каждую новую платформу (со своей особенной архитектурой) приходилось писать
+свой компилятор, что отнимало много времени и сил. Для решения этой проблемы была предложена идея
+промежуточного представления (intermediate representation). При этом компилятор состоит из двух
+частей. Первая из исходного кода генерирует код на достаточно простом промежуточном языке. Вторая
+часть транслирует промежуточный код (байт-код) в машинный код. Впервые эта идея была реализована
+для языка BCPL около 1967 года, за счёт чего при портировании компилятора на новую платформу
+приходилось переписывать лишь $1/5$ часть его кода.
+
+Впоследствии эта идея получила очень широкое распространение. Кроме простоты портирования
+компиляторов, использование промежуточного представления позволяет отвязать исходный
+высокоуровневый язык от конкретной ахитектуры. Например, можно ``постановить'', что Int -
+целочисленный тип длиной 32 бита, а Long - 64 бита (я думаю, читатель помнит, что в C++ для int и
+long определены лишь верхний и нижний пределы их длины, а не их длина в точности). При этом
+реализация этих типов на конретной архитектуре осуществляется при написании второй части
+компилятора, переводящего байт-код в машинный код.
+
+Вместо второй части компилятора можно использовать интерпретатор, который покомандно (построчно)
+выполняет байт-код. Такой интерпретатор называется виртуальной машиной (virtual machine).
+Интерпретатор, как правило, легче реализовывать, кроме того, он, например, может проверять
+корректность ссылок (на этапе компиляции реализовать такую проверку можно далеко не всегда).
+Подобным образом - за счёт дополнительных проверок - Java virtual machine (JVM) защищает данные от
+случайного повреждения, а саму себя - от падения. В настоящее время JVM использует компиляцию на
+лету (just-in-time compilation), что делает её очень эффективной. Помимо Java, в байткод JVM
+компилируются Kotlin, Scala, Clojure и ряд других языков.
+
+\subsubsection{Scala basics}
+
+Самый простой способ начать осваивать Scala --- установить среду разработки (Integrated development
+environment, IDE) Intellij IDEA с плагином для Scala и создать в ней новый проект. После её
+установки потребуется либо скачать Java SDK из интерфейса Intellij IDEA (File -> Project Structure
+-> SDKs -> +), либо установить Java SDK самостоятельно и указать путь к нему в том же интерфейсе.
+Некоторые советы по использованию и возможностям IntelliJ IDEA собраны здесь
+https://github.com/EvgenyNerush/intellij-tips (можно скачать этот проект себе на компьютер, открыть
+в IntelliJ файл src/main/kotlin/main.kt и, читая его, одновременно пробовать возможности IntelliJ).
+
+Для первых экспериментов достаточно в проекте создать (и после запустить на выполнение) рабочий
+листок (правая кнопка мыши New/Scala Worksheet). Примеры кода:
+
+\inputminted{scala}{scalaBasics.sc}
+
+%Точкой входа в
+%программу на языке Kotlin является функция main, поэтому простейшая программа может состоять из
+%одного файла (для его создания можно кликнуть правой кнопкой мыши директорию src в проекте, и далее
+%выбрать New -> Kotlin File -> hw; будет создан файл hw.kt), содержащего следующий код:
+%\begin{minted}{kotlin}
+%    fun main() {
+%        println("Hi, world!")
+%    }
+%\end{minted}
+%Для компиляции и выполнения программы достаточно нажать Shift+F10.
+%
+%Kotlin --- статически типизированный язык, тип переменных необходимо либо указывать явно после
+%двоеточия, либо не указывать --- если его можно вывести из выражения. Переменные могут быть
+%объявлены read-only константами (val), либо быть действительно переменными (var). Рассмотрим
+%примеры, поясняющие основы синтаксиса языка Kotlin.
+
 \subsection{Сортировка слиянием.}
 
 Существует множество методов сортировки, среди которых нет <<лучшего>>. Выбор
